--- a/src/app/todo/todo-info/todo-info.component.html
+++ b/src/app/todo/todo-info/todo-info.component.html
@@ -1,5 +1,8 @@
 <h3>TODO Info</h3>
-<h5>Total des todos: {{ (todos$ | async).length }}</h5>
+<ng-container *ngIf="todoState$ | async as todoState">
+  <h5>Total des todos: {{ todoState.todos.length }}</h5>
+  <h5>Dernière mise à jour: {{ todoState.lastUpdate | date:'mediumTime' }}</h5>
+</ng-container>
 <button class="btn btn-danger btn-sm" (click)="deleteAllTodos()">
   Tout supprimer
   <span class="fa fa-trash"></span>
