--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -1,27 +1,25 @@
 <h3>TODO List</h3>
 <div class="input-group">
   <input class="form-control" (keyup.enter)="isEdit ? confirmTodo(name) : addTodo(name)" [(ngModel)]="name">
-  <button class="btn btn-success" (click)="addTodo(name)" *ngIf="!isEdit">
+  <button class="btn btn-success" (click)="addTodo(name)" *ngIf="!isEdit" [disabled]="!name">
     Ajouter
   </button>
-  <button class="btn btn-info" (click)="confirmTodo(name)" *ngIf="isEdit">
+  <button class="btn btn-info" (click)="confirmTodo(name)" *ngIf="isEdit" [disabled]="!name">
     Modifier
   </button>
 </div>
 
-<ng-container *ngIf="todoState$ | async as todoState">
-  <div *ngFor="let todo of todoState.todos" class="mt-3">
-    {{ todo.name }}
-    <div class="btn-group btn-group-sm float-right">
-      <button class="btn btn-info" (click)="updateTodo(todo)">
-        <span class="fa fa-edit"></span>
-      </button>
-      <button class="btn btn-danger" (click)="deleteTodo(todo)">
-        <span class="fa fa-trash"></span>
-      </button>
-    </div>
+<div *ngFor="let todo of todos$ | async" class="mt-3">
+  {{ todo.name }}
+  <div class="btn-group btn-group-sm float-right">
+    <button class="btn btn-info" (click)="updateTodo(todo)">
+      <span class="fa fa-edit"></span>
+    </button>
+    <button class="btn btn-danger" (click)="deleteTodo(todo)">
+      <span class="fa fa-trash"></span>
+    </button>
   </div>
-  <h3 *ngIf="!todoState.todos.length" class="mt-3">
-    Aucun TODO trouvé, veuillez en rajouter.
-  </h3>
-</ng-container>
+</div>
+<h3 *ngIf="(count$ | async) === 0" class="mt-3">
+  Aucun TODO trouvé, veuillez en rajouter.
+</h3>
