--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div *ngFor="let todo of todos$ | async" class="mt-3">
-  {{ todo.name }}
+  {{ todo.name }} - {{ todo.id }}
   <div class="btn-group btn-group-sm float-right">
     <button class="btn btn-info" (click)="updateTodo(todo)">
       <span class="fa fa-edit"></span>
